feat: 完成实训任务管理全流程功能开发
本次提交实现了完整的教师端实训任务管理系统，包括：
1.  新增实训任务实体字段与前端类型定义，补充模板名称、下发范围等展示字段
2.  重构实训任务控制器，实现任务的CRUD、启停、重新下发等完整API
3.  优化模板管理，新增创建者权限校验，修复初始化脚本执行顺序
4.  完善前端实训管理页面，支持任务列表展示、编辑、删除、启停和重新下发
5.  新增任务创建表单，支持配置实训类型、起止时间
6.  修复字符串判空和列表初始化的代码细节问题